--- a/css/estilo.css
+++ b/css/estilo.css
@@ -41,5 +41,44 @@ body {
             1px -1px 0 black,
             -1px 1px 0 black,
             1px 1px 0 black; /* Cor do contorno */
+           
+            
 }
 
+.fade-in{
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 1s forwards;
+}
+
+
+
+@keyframes fadeInUp{
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+
+.imgbanner{
+    width: 700px;
+    height: 550px;
+
+}
+
+.image-container {
+    position: relative;
+}
+
+.mask {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Ajuste a opacidade */
+    pointer-events: none; /* Permite interagir com a imagem */
+}
