--- a/css/estilo.css
+++ b/css/estilo.css
@@ -63,10 +63,17 @@ body {
 
 
 .imgbanner{
-    width: 700px;
-    height: 550px;
+    width: 100%;
+    height: 70%;
 
 }
+
+.imgbanner1{
+    width: 100%;
+    height: 100%;
+
+}
+
 
 .image-container {
     position: relative;
