--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3007,6 +3007,45 @@ textarea.form-control-lg {
   background-color: var(--bs-btn-bg);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+.btn2 {
+  --bs-a-padding-x: 0.75rem;
+  --bs-a-padding-y: 0.375rem;
+  --bs-a-font-family: ;
+  --bs-a-font-size: 1rem;
+  --bs-a-font-weight: 400;
+  --bs-a-line-height: 1.5;
+  --bs-a-color: var(--bs-body-color);
+  --bs-a-bg: transparent;
+  --bs-a-border-width: var(--bs-border-width);
+  --bs-a-border-color: transparent;
+  --bs-a-border-radius: var(--bs-border-radius);
+  --bs-a-hover-border-color: transparent;
+  --bs-a-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+  --bs-a-disabled-opacity: 0.65;
+  --bs-a-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
+  display: inline-block;
+  padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
+  font-family: var(--bs-btn-font-family);
+  font-size: var(--bs-btn-font-size);
+  font-weight: var(--bs-btn-font-weight);
+  line-height: var(--bs-btn-line-height);
+  color: var(--bs-btn-color);
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
+  border-radius: var(--bs-btn-border-radius);
+  background-color: var(--bs-btn-bg);
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+
+
 @media (prefers-reduced-motion: reduce) {
   .btn {
     transition: none;
@@ -3237,6 +3276,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #198754;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #198754;
+  --bs-gradient: none;
+}
+
+.btn-outline-success2 {
+  --bs-a-color: #198754;
+  --bs-a-border-color: #198754;
+  --bs-a-hover-color: #fff;
+  --bs-a-hover-bg: #198754;
+  --bs-a-hover-border-color: #198754;
+  --bs-a-focus-shadow-rgb: 25, 135, 84;
+  --bs-a-active-color: #fff;
+  --bs-a-active-bg: #198754;
+  --bs-a-active-border-color: #198754;
+  --bs-a-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-a-disabled-color: #198754;
+  --bs-a-disabled-bg: transparent;
+  --bs-a-disabled-border-color: #198754;
   --bs-gradient: none;
 }
 
