--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,18 +11,38 @@
 
 
 .navbarkk{
+
     background-image: url(../img/navbar.PNG);
-    
+
 }
 
 .navbartext{
     color: blueviolet;
+    transition: color 0.5s ease; /* Transição suave de 0.5 segundos */
+}
+
+
+.navbartext:hover{
+    color: #198754;
 }
 
 
 
+
+.navbartext2{
+    color: white;
+    background-color: #198754;
+    transition: color 1.s ease; /* Transição suave de 0.5 segundos */
+}
+
+
+.navbartext2:hover{
+    background-color: blueviolet;
+}
+
 body {
     font-family: 'Minecraft', sans-serif;
+    background-color: #f9f6ee;
 }
 
 .textosec{
@@ -75,7 +95,7 @@ body {
 }
 
 
-.image-container {
+/* .image-container {
     position: relative;
 }
 
@@ -87,4 +107,286 @@ body {
     right: 0;
     bottom: 0;
   
+} */
+
+
+.navbartext :hover{
+    color: #198754;
+}
+
+
+.butao{
+    color: #198754;
+}
+
+
+.services-section {
+    text-align: center;
+}
+
+.services-section h1 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    padding-top: 5%;
+}
+
+.subtitle {
+    font-size: 1.2rem;
+    color: #888;
+    margin-bottom: 40px;
+}
+
+.services-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.service-item {
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    width: 250px;
+    text-align: center;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.service-item img {
+    width: 10em;
+    height: 10em;
+    margin-bottom: 20px;
+}
+
+.service-item h3 {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+}
+
+.service-item p {
+    font-size: 1rem;
+    color: #666;
+}
+
+/* Animation for fade-in effect */
+.fade-in.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.slide-up.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.text-content {
+    flex: 1;
+    padding-right: 50px;
+}
+
+.text-content h1 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.text-content p {
+    font-size: 1.1em;
+    line-height: 1.6;
+    color: #555;
+}
+
+.image-content {
+    flex: 1;
+    
+}
+
+.image-content img {
+    width: 35em;
+    height: auto;
+    border-radius: 8px;
+}
+
+.container {
+    display: flex;
+    width: 80%;
+    max-width: 1200px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left-section {
+    flex: 1;
+}
+
+.logo {
+    width: 35em;
+    max-width: 400px;
+}
+
+.right-section {
+    flex: 1;
+    text-align: left;
+}
+
+.right-section h1 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    color: blueviolet;
+}
+
+.right-section h2 {
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+    color: blueviolet;
+}
+.right-section p {
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+    color: blueviolet;
+}
+
+button {
+    display: block;
+    width: 80%;
+    padding: 10px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.signup-google {
+    background-color: #fff;
+    color: #000;
+}
+
+.signup-apple {
+    background-color: #fff;
+    color: #000;
+}
+
+.create-account {
+    background-color: #198754;
+    color: #fff;
+}
+
+
+.or-divider span {
+    font-size: 1rem;
+    color: #aaa;
+}
+
+.login {
+    margin-top: 20px;
+    font-size: 1rem;
+}
+
+.login a {
+    color: #198754;
+    text-decoration: none;
+    transition: color 1.s ease; /* Transição suave de 0.5 segundos */
+}
+
+.login a :hover {
+    color: blueviolet;
+}
+
+
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 0.9rem;
+    border-top: 1px solid #333;
+}
+
+footer a {
+    color:#198754;
+    text-decoration: none;
+}
+
+.logincor{
+    background-color: rgb(62, 27, 77);
+}
+
+.input-group {
+    margin-bottom: 15px;
+    color: blueviolet;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color:blueviolet;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+/* button:hover {
+    background-color: #198754;
+} */
+
+h1 {
+    text-align: center;
+    color: #333;
+}
+
+.team {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+    background-color: #f9f6ee;
+}
+
+.member {
+    background: white;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+    width: 200px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.member img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.member h3 {
+    margin: 10px 0 5px;
+    font-size: 18px;
+    color: #555;
+}
+
+.title1{
+    padding-top: 5%;
 }
