--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,42 +1,28 @@
 @font-face {
     font-family: 'Minecraft';
     src: url('../fontes/Minecrafter.Alt.ttf') format('truetype');
-    /* Adicione outros formatos se necessário */
 }
 
-
-
-
-
-
-
-.navbarkk{
-
+.navbarkk {
     background-image: url(../img/navbar.PNG);
-
 }
 
-.navbartext{
+.navbartext {
     color: blueviolet;
-    transition: color 0.5s ease; /* Transição suave de 0.5 segundos */
+    transition: color 0.5s ease;
 }
 
-
-.navbartext:hover{
+.navbartext:hover {
     color: #198754;
 }
 
-
-
-
-.navbartext2{
+.navbartext2 {
     color: white;
     background-color: #198754;
-    transition: color 1.s ease; /* Transição suave de 0.5 segundos */
+    transition: color 1s ease;
 }
 
-
-.navbartext2:hover{
+.navbartext2:hover {
     background-color: blueviolet;
 }
 
@@ -45,80 +31,37 @@ body {
     background-color: #f9f6ee;
 }
 
-.textosec{
+.textosec {
     color: blueviolet;
-        text-shadow: 
-            -1px -1px 0 black,
-            1px -1px 0 black,
-            -1px 1px 0 black,
-            1px 1px 0 black; /* Cor do contorno */
-    }
-    
-.titulocar{
-    color: #198754;
-    text-shadow: 
-            -1px -1px 0 black,
-            1px -1px 0 black,
-            -1px 1px 0 black,
-            1px 1px 0 black; /* Cor do contorno */
-           
-            
+    text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 }
 
-.fade-in{
+.titulocar {
+    color: #198754;
+    text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+}
+
+.fade-in {
     opacity: 0;
     transform: translateY(20px);
     animation: fadeInUp 1s forwards;
 }
 
-
-
-@keyframes fadeInUp{
+@keyframes fadeInUp {
     to {
         opacity: 1;
         transform: translateY(0);
     }
 }
 
-
-
-.imgbanner{
+.imgbanner, .imgbanner1 {
     width: 100%;
-    height: 70%;
-
+    height: auto;
 }
 
-.imgbanner1{
-    width: 100%;
-    height: 100%;
-
-}
-
-
-/* .image-container {
-    position: relative;
-}
-
-.mask {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  
-} */
-
-
-.navbartext :hover{
+.butao {
     color: #198754;
 }
-
-
-.butao{
-    color: #198754;
-}
-
 
 .services-section {
     text-align: center;
@@ -126,14 +69,14 @@ body {
 
 .services-section h1 {
     font-size: 2.5rem;
-    margin-bottom: 10px;
+    margin-bottom: 2%;
     padding-top: 5%;
 }
 
 .subtitle {
     font-size: 1.2rem;
     color: #888;
-    margin-bottom: 40px;
+    margin-bottom: 5%;
 }
 
 .services-container {
@@ -180,24 +123,23 @@ body {
     opacity: 1;
     transform: translateY(0);
 }
-
 .content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px;
+    padding: 5%;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .text-content {
     flex: 1;
-    padding-right: 50px;
+    padding-right: 5%;
 }
 
 .text-content h1 {
     font-size: 2em;
-    margin-bottom: 20px;
+    margin-bottom: 2%;
 }
 
 .text-content p {
@@ -208,11 +150,11 @@ body {
 
 .image-content {
     flex: 1;
-    
 }
 
 .image-content img {
-    width: 35em;
+    width: 100%;
+    max-width: 35em;
     height: auto;
     border-radius: 8px;
 }
@@ -230,8 +172,10 @@ body {
 }
 
 .logo {
-    width: 35em;
-    max-width: 400px;
+    width: 100%;
+    max-width: 25em;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 .right-section {
@@ -241,40 +185,25 @@ body {
 
 .right-section h1 {
     font-size: 2.5rem;
-    margin-bottom: 10px;
+    margin-bottom: 2%;
     color: blueviolet;
 }
 
-.right-section h2 {
+.right-section h2, .right-section p {
     font-size: 1.5rem;
-    margin-bottom: 30px;
-    color: blueviolet;
-}
-.right-section p {
-    font-size: 1.5rem;
-    margin-bottom: 30px;
+    margin-bottom: 4%;
     color: blueviolet;
 }
 
 button {
     display: block;
     width: 80%;
-    padding: 10px;
-    margin: 10px 0;
+    padding: 2%;
+    margin: 2% 0;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
     cursor: pointer;
-}
-
-.signup-google {
-    background-color: #fff;
-    color: #000;
-}
-
-.signup-apple {
-    background-color: #fff;
-    color: #000;
 }
 
 .create-account {
@@ -282,28 +211,25 @@ button {
     color: #fff;
 }
 
-
 .or-divider span {
     font-size: 1rem;
     color: #aaa;
 }
 
 .login {
-    margin-top: 20px;
+    margin-top: 4%;
     font-size: 1rem;
 }
 
 .login a {
     color: #198754;
     text-decoration: none;
-    transition: color 1.s ease; /* Transição suave de 0.5 segundos */
+    transition: color 1s ease;
 }
 
-.login a :hover {
+.login a:hover {
     color: blueviolet;
 }
-
-
 
 footer {
     position: fixed;
@@ -312,45 +238,41 @@ footer {
     background-color: #000;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
+    padding: 1%;
     font-size: 0.9rem;
     border-top: 1px solid #333;
 }
 
 footer a {
-    color:#198754;
+    color: #198754;
     text-decoration: none;
 }
 
-.logincor{
+.logincor {
     background-color: rgb(62, 27, 77);
 }
 
 .input-group {
-    margin-bottom: 15px;
+    margin-bottom: 3%;
     color: blueviolet;
 }
 
 input {
     width: 100%;
-    padding: 10px;
+    padding: 2%;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
 button {
     width: 100%;
-    padding: 10px;
-    background-color:blueviolet;
+    padding: 2%;
+    background-color: blueviolet;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
-
-/* button:hover {
-    background-color: #198754;
-} */
 
 h1 {
     text-align: center;
@@ -360,18 +282,17 @@ h1 {
 .team {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around; 
+    justify-content: space-around;
     background-color: #f9f6ee;
 }
 
 .member {
     background: white;
     border: 1px solid #ddd;
-    border-radius: 5px;
-    margin: 10px;
-    padding: 10px;
+    margin: 2%;
+    padding: 2%;
     text-align: center;
-    width: 200px;
+    width: 20%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -382,11 +303,127 @@ h1 {
 }
 
 .member h3 {
-    margin: 10px 0 5px;
+    margin: 2% 0 1%;
     font-size: 18px;
     color: #555;
 }
 
-.title1{
+.title1 {
     padding-top: 5%;
+}
+
+/* Responsividade para tablets */
+@media (max-width: 768px) {
+    .service-item {
+        width: 45%; /* Aumenta a largura em telas menores */
+    }
+
+    .services-container {
+        flex-direction: column; /* Alinha os itens em coluna */
+        align-items: center; /* Centraliza os itens */
+    }
+
+    .content {
+        flex-direction: column;
+    }
+
+    .text-content, .image-content {
+        padding: 2%;
+    }
+
+    .right-section h1 {
+        font-size: 2rem;
+    }
+
+    .logo {
+        max-width: 25em;
+    }
+
+    .image-content img {
+        max-width: 30em;
+    }
+}
+
+/* Responsividade para dispositivos móveis */
+@media (max-width: 480px) {
+    .service-item {
+        width: 100%; /* Aumenta a largura em telas muito pequenas */
+    }
+
+    h1, .right-section h1, .right-section h2, .right-section p, .service-item h3 {
+        font-size: 1.2rem; /* Ajusta o tamanho da fonte em telas pequenas */
+    }
+
+    .text-content {
+        padding-right: 0;
+    }
+
+    .text-content h1 {
+        font-size: 1.5rem;
+    }
+
+    .image-content img {
+        max-width: 100%;
+    }
+
+    .content, .container {
+        padding: 2%;
+    }
+
+    button {
+        width: 100%;
+        padding: 3%;
+    }
+
+    footer {
+        padding: 2%;
+        font-size: 0.8rem;
+    }
+
+    /* Ajuste de tamanho da legenda do carrossel em telas menores */
+    .carousel-caption .titulocar {
+        font-size: 1rem; /* Ajuste de tamanho do título em telas menores */
+    }
+
+    .carousel-caption .textosec {
+        font-size: 0.8rem; /* Ajuste de tamanho do texto secundário em telas menores */
+    }
+
+    /* Garantir que a legenda não suma */
+    .carousel-caption {
+        display: block !important; /* Mantém a legenda visível */
+    }
+}
+
+.transparent-button {
+    display: inline-block; /* Faz o botão se comportar como um bloco */
+    padding: 5px 20px; /* Espaçamento interno */
+    border: 2px solid #198754; /* Borda do botão */
+    border-radius: 5px; /* Bordas arredondadas */
+    color: #198754; /* Cor do texto */
+    background-color: transparent; /* Fundo transparente */
+    text-decoration: none; /* Remove o sublinhado */
+    font-size: 1rem; /* Tamanho da fonte */
+    transition: background-color 0.3s ease, color 0.3s ease; /* Transições para efeitos de hover */
+    height: 35px;
+    align-self: center;
+    text-align: center;
+    margin-right: 3%;
+    margin-left: 3%;
+}
+
+.transparent-button:hover {
+    background-color: #198754; /* Fundo do botão ao passar o mouse */
+    color: white; /* Cor do texto ao passar o mouse */
+}
+
+.navbartext3{
+    background-color: #198754;
+    text-decoration: none;
+    transition: color 1s ease;
+    color: #fff;
+}
+
+.navbartext3:hover{
+    background-color: blueviolet;
 }
