--- a/css/pay.css
+++ b/css/pay.css
@@ -155,6 +155,24 @@ h1 {
     display: none;
 }
                                        
-                                       
+ .a-link {
+    color: rgb(255, 255, 255); /* Cor do link */
+    text-decoration: none;
+    transition: color 0.5s ease;
+  }
+  
+  .a-link:hover {
+    color: #198754; /* Efeito ao passar o mouse */
+  }                               
                                          
-            
+  button {
+    background-color: #28a745; /* Cor do botão */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: color 1s ease;
+    font-family: 'minecraft', sans-serif;
+}
