--- a/css/profile.css
+++ b/css/profile.css
@@ -83,3 +83,95 @@ p {
     background-color: blueviolet;
    
 }
+
+
+/* Animação de confete */
+#confetti {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 1.5em;
+    text-align: center;
+    animation: fade-in 1s ease;
+}
+
+.confetti {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    pointer-events: none;
+    background: url('./img/confetti.gif') repeat;
+}
+
+.congrats-message {
+    position: absolute;
+    padding: 20px;
+    border-radius: 10px;
+    background: #4CAF50;
+    color: #fff;
+    font-weight: bold;
+}
+
+/* Animação de fade-in */
+@keyframes fade-in {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+
+/* Estilo para a imagem de perfil na página de edição */
+.profile-image-container {
+    position: relative;
+    width: fit-content;
+}
+
+#profileImagePreview {
+    transition: opacity 0.3s ease;
+}
+
+.profile-image-container:hover #profileImagePreview {
+    opacity: 0.5; /* Torna a imagem semitransparente ao passar o mouse */
+}
+
+/* Ícone de lixeira */
+.trash-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    display: none;
+}
+
+.profile-image-container:hover .trash-icon {
+    display: block;
+}
+
+/* Visualização de imagem em detalhe */
+.enlarged-image-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.enlarged-image {
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0 0 10px #000;
+}
