--- a/css/estilo.css
+++ b/css/estilo.css
@@ -577,6 +577,13 @@ ul li a:hover {
     background-color: #333; /* Cor ao passar o mouse */
 }
 
+.wrapper{
+    padding-top: 50px;
+    height: 100%;
+}
+
+
+
 .card {
     width: 80px;
     border-radius: .75rem;
@@ -589,6 +596,8 @@ ul li a:hover {
     align-items: flex-end;
     transition: .6s cubic-bezier(.28, -0.03, 0, .99);
     box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+    height: 80px;
+    
 }
 
 .card > .row {
@@ -659,3 +668,4 @@ input:checked + label .description {
 .card[for="c4"] {
     background-image: url(https://plus.unsplash.com/premium_photo-1663134285459-0022b0e78970?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
+
